test/kind/wrong/type4.kk
type int
alias wrong = int -> int int